--- a/Company/src/main/resources/static/index.html
+++ b/Company/src/main/resources/static/index.html
@@ -43,6 +43,9 @@
 <!-- ANGULAR JS FILES -->
 <script src="app.js" type="text/javascript"></script>
 <script src="Invoice/InvoiceModule.js" type="text/javascript"></script>
+<script src="Invoice/ObjectFactoryService.js" type="text/javascript"></script>
+<script src="Invoice/CompanyService.js" type="text/javascript"></script>
+<script src="Invoice/InvoiceService.js" type="text/javascript"></script>
 <script src="Invoice/InvoiceController.js" type="text/javascript"></script>
 <script src="Payment Order/PaymentOrderModule.js" type="text/javascript"></script>
 <script src="Payment Order/PaymentOrderController.js" type="text/javascript"></script>
