--- a/Company/src/main/resources/static/index.html
+++ b/Company/src/main/resources/static/index.html
@@ -45,6 +45,7 @@
 <script src="Invoice/InvoiceModule.js" type="text/javascript"></script>
 <script src="Invoice/ObjectFactoryService.js" type="text/javascript"></script>
 <script src="Invoice/CompanyService.js" type="text/javascript"></script>
+<script src="Invoice/ProductOrServiceService.js" type="text/javascript"></script>
 <script src="Invoice/InvoiceService.js" type="text/javascript"></script>
 <script src="Invoice/InvoiceController.js" type="text/javascript"></script>
 <script src="Payment Order/PaymentOrderModule.js" type="text/javascript"></script>
