--- a/Company/src/main/resources/static/Invoice/invoice.html
+++ b/Company/src/main/resources/static/Invoice/invoice.html
@@ -1,4 +1,3 @@
-
 <div class="container-fluid">
 
 	<div class="form-group">
@@ -16,13 +15,19 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="invoice in createdInvoices">
+			<tr ng-repeat="invoice in createdInvoices" ng-show="!invoice.poslata">
 				<td>{{ invoice.zaglavljeFakture.nazivKupca }}</td>
 				<td>{{ invoice.zaglavljeFakture.adresaKupca }}</td>
 				<td>{{ invoice.zaglavljeFakture.iznosZaUplatu }}</td>
-				<td><div class="form-group">
-						<button type="button" class="btn btn-primary btn-sm"
-							ng-click="sendInvoice(invoice)">Posalji fakturu</button>
+				<td><div class="row">
+						<div class="form-group col-md-6">
+							<button type="button" class="btn btn-primary btn-sm"
+								ng-click="sendInvoice(invoice)">Pošalji</button>
+						</div>
+						<div class="form-group col-md-6">
+							<button type="button" class="btn btn-danger btn-sm"
+								ng-click="removeInvoice(invoice)">Obriši</button>
+						</div>
 					</div></td>
 			</tr>
 		</tbody>
@@ -78,11 +83,29 @@
 					<div class="form-group">
 						<label for="buyer" class="control-label"> Kupac: </label> <select
 							ng-options="company as company.ime for company in companies track by company.id"
-							class="form-control" id="buyer" ng-model="buyer">
+							ng-model="selectedCompany" class="form-control" id="buyer"
+							ng-change="setInvoiceHeaderBuyer(selectedCompany)">
 							<option style="background-color: #ccc" value="">Izaberi
 								kupca...</option>
 						</select>
 					</div>
+					<div class="row">
+						<label class="col-md-6">Vrednost robe:
+							{{invoice.zaglavljeFakture.vrednostRobe}}</label> <label class="col-md-6">Vrednost
+							usluga: {{invoice.zaglavljeFakture.vrednostUsluga}}</label>
+					</div>
+					<div class="row">
+						<label class="col-md-6">Ukupna vrednost:
+							{{invoice.zaglavljeFakture.ukupnoRobaIUsluge}}</label> <label
+							class="col-md-6">Ukupan rabat:
+							{{invoice.zaglavljeFakture.ukupanRabat}}</label>
+					</div>
+					<div class="row">
+						<label class="col-md-6">Ukupan porez:
+							{{invoice.zaglavljeFakture.ukupanPorez}}</label> <label class="col-md-6">Iznos
+							za uplatu: {{invoice.zaglavljeFakture.iznosZaUplatu}}</label>
+					</div>
+
 					<div class="form-group">
 						<button type="button" class="btn btn-primary btn-sm"
 							ng-click="addInvoiceItem()">Dodaj stavku</button>
@@ -130,7 +153,7 @@
 											cena: {{invoiceItem.jedinicnaCena}}</label>
 									</div>
 									<div class="row">
-										<label class="col-md-6">Ukupno:
+										<label class="col-md-6">Ukupna vrednost:
 											{{invoiceItem.vrednost}}</label> <label class="col-md-6">Iznos
 											rabata: {{invoiceItem.iznosRabata}}</label>
 									</div>
@@ -146,7 +169,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default pull-left"
-						data-dismiss="modal" ng-click="createInvoice()">Pošalji</button>
+						data-dismiss="modal" ng-click="createInvoice()">Kreiraj</button>
 					<button type="button" class="btn btn-default pull-right"
 						data-dismiss="modal">Odustani</button>
 				</div>
