--- a/Company/src/main/resources/static/index.html
+++ b/Company/src/main/resources/static/index.html
@@ -49,6 +49,10 @@
 <script src="Invoice/InvoiceService.js" type="text/javascript"></script>
 <script src="Invoice/InvoiceController.js" type="text/javascript"></script>
 <script src="Payment Order/PaymentOrderModule.js" type="text/javascript"></script>
+<script src="Payment Order/InvoiceService.js" type="text/javascript"></script>
+<script src="Payment Order/ObjectFactoryService.js" type="text/javascript"></script>
+<script src="Payment Order/PaymentOrderService.js" type="text/javascript"></script>
+<script src="Payment Order/CompanyService.js" type="text/javascript"></script>
 <script src="Payment Order/PaymentOrderController.js" type="text/javascript"></script>
 <script src="Overview/OverviewModule.js" type="text/javascript"></script>
 <script src="Overview/OverviewController.js" type="text/javascript"></script>
