Dodati entiteti za nalog i racun u sve projekte

--- a/Company/src/main/resources/static/index.html
+++ b/Company/src/main/resources/static/index.html
@@ -70,9 +70,9 @@
                 </div>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#invoice"><i class="fa fa-home"></i> Fakture</a></li>
-                    <li><a href="#payment-order"><i class="fa fa-shield"></i> Nalozi za placanje</a></li>
-                    <li><a href="#overview"><i class="fa fa-comment"></i> Izvodi</a></li>
+                    <li><a href="#fakture"><i class="fa fa-home"></i> Fakture</a></li>
+                    <li><a href="#nalozi"><i class="fa fa-shield"></i> Nalozi za placanje</a></li>
+                    <li><a href="#izvod"><i class="fa fa-comment"></i> Izvodi</a></li>
                 </ul>
             </div>
             </nav>
