--- a/Company/src/main/resources/static/index.html
+++ b/Company/src/main/resources/static/index.html
@@ -42,9 +42,9 @@
 
 <!-- ANGULAR JS FILES -->
 <script src="app.js" type="text/javascript"></script>
+<script src="Commons/CompanyService.js" type="text/javascript"></script>
 <script src="Invoice/InvoiceModule.js" type="text/javascript"></script>
 <script src="Invoice/InvoiceObjectFactoryService.js" type="text/javascript"></script>
-<script src="Invoice/InvoiceCompanyService.js" type="text/javascript"></script>
 <script src="Invoice/ProductOrServiceService.js" type="text/javascript"></script>
 <script src="Invoice/InvoiceService.js" type="text/javascript"></script>
 <script src="Invoice/InvoiceController.js" type="text/javascript"></script>
@@ -52,9 +52,10 @@
 <script src="Payment Order/PaymentOrderInvoiceService.js" type="text/javascript"></script>
 <script src="Payment Order/PaymentOrderObjectFactoryService.js" type="text/javascript"></script>
 <script src="Payment Order/PaymentOrderService.js" type="text/javascript"></script>
-<script src="Payment Order/PaymentOrderCompanyService.js" type="text/javascript"></script>
 <script src="Payment Order/PaymentOrderController.js" type="text/javascript"></script>
 <script src="Overview/OverviewModule.js" type="text/javascript"></script>
+<script src="Overview/OverviewService.js" type="text/javascript"></script>
+<script src="Overview/OverviewObjectFactoryService.js" type="text/javascript"></script>
 <script src="Overview/OverviewController.js" type="text/javascript"></script>
 <!-- SERVICE FILES -->
 
