Izvrsene poslednje izmene

--- a/Company/src/main/resources/static/Overview/overview.html
+++ b/Company/src/main/resources/static/Overview/overview.html
@@ -34,14 +34,14 @@
 
 	<div ng-repeat="overviewSection in overviewSections">
 		<hr/>
+			<h2>Presek broj {{overviewSection.zaglavlje.brojPreseka}}:</h2>
+		
+		<hr/>
 		<h4>
 			<b>Broj računa:</b> {{overviewSection.zaglavlje.brojRacuna}}
 		</h4>
 		<h4>
 			<b>Datum naloga:</b> {{overviewSection.zaglavlje.datumNaloga}}
-		</h4>
-		<h4>
-			<b>Broj preseka:</b> {{overviewSection.zaglavlje.brojPreseka}}
 		</h4>
 		<h4>
 			<b>Prethodno stanje:</b>
