--- a/Company/src/main/resources/static/index.html
+++ b/Company/src/main/resources/static/index.html
@@ -67,7 +67,7 @@
             <nav class="navbar navbar-default">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Stranica firme</a>
+                    <a class="navbar-brand" href="/Firma">Stranica firme</a>
                 </div>
 
                 <ul class="nav navbar-nav navbar-right">
